package com.github.kokasumi.design.principles.lsp.cs.composition;

/**
 * @version v1.0
 * @author: lg
 * @date: 2022/10/17 1:13
 * @description
 * @since v1.0
 */
public abstract class AbstractToy {
}
